--- a/www/package.json
+++ b/www/package.json
@@ -35,5 +35,9 @@
   },
   "dependencies": {
     "rust-web-game": "file:./pkg"
+  },
+  "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
   }
 }
