--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
-fstrings = "0.2.3"
+web-sys = {version = "0.3.57", features = ["EventListener", "KeyboardEvent"]}
+
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
